# hackademy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: db.rs  main.rs  model.rs
src/routes/: auth.rs  category.rs  mod.rs  quiz.rs  search.rs  session.rs  subcategory.rs
src/templates/: auth_login.html  auth_profile.html  auth_register.html  category_list.html  home.html  layout.html  quiz.html  quiz_results.html  search_results.html  subcategory_list.html
src/utils/: config.rs  security.rs
