[package]
name = "hackademy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
poem = "1.3"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }

argon2 = "0.5"
rand_core = "0.6"
nanoid = "0.4"

[dev-dependencies]
sqlx-cli = { version = "0.6", features = ["sqlite"] }